# RAG-with-eval-harness

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: eval.yml
eval/datasets/: __init__.py  baseline_report.json  generator.py  loader.py  sample.jsonl  schema.py
eval/datasets/test_corpus/: acme_policy.md
eval/metrics/: __init__.py  composite.py  generation.py  retrieval.py
eval/runners/: __init__.py  cli.py  run_eval.py  runner.py
infra/: .env.example  DOKPLOY.md  docker-compose.yml
infra/dockerfiles/: api.Dockerfile  ingestion.Dockerfile  reranker.Dockerfile
services/api/: answer_eval.py  cache.py  config.py  errors.py  main.py  metrics.py  observability.py  pipeline.py  retrieval.py  runtime.py
services/api/static/: app.js  index.html  styles.css
services/ingestion/: chunker.py  config.py  embedder.py  indexer.py  main.py  observability.py  pipeline.py
services/reranker/: config.py  main.py  model.py
tests/: test_answer_eval.py  test_cache.py  test_chunker.py  test_eval_runner.py
