[project]
name = "rag-system"
version = "0.1.0"
description = "Production RAG system with evaluation harness"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

[project.scripts]
rag-eval = "eval.runners.cli:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[dependency-groups]
api = [
    "streamlit>=1.40.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.22.0",
    "pydantic-settings>=2.6.0",
    "bm25s>=0.2.0",
    "openai>=1.55.0",
    "qdrant-client>=1.12.0",
    "redis>=8.0.0",
    "numpy>=2.4.6",
    "structlog>=25.5.0",
    "tiktoken>=0.8.0",
]
ingestion = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "unstructured[docx,pdf]>=0.16.0",
    "uvicorn[standard]>=0.32.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.55.0",
    "qdrant-client>=1.12.0",
    "structlog>=25.5.0",
    "tiktoken>=0.8.0",
    "tenacity>=9.0.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
]
reranker = [
    "sentence-transformers>=3.3.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.32.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
]
eval = [
    "click>=8.1.0",
    "deepeval>=2.0.0",
    "ragas>=0.2.0",
    "datasets>=3.1.0",
    "httpx>=0.28.0",
    "openai>=1.55.0",
    "pandas>=2.2.0",
    "rich>=13.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["."]
include = ["eval*", "services*"]
namespaces = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "eval", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["services", "eval"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
